# any-depth-alignment

./: .env.example  .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
ada/: __init__.py  registry.py
ada/attacks/: __init__.py  extract.py  sft.py
ada/data/: __init__.py  benchmarks.py  injection.py  loading.py
ada/datagen/: __init__.py  continue_wildjailbreak.py  gen_benign_responses.py  gen_benign_wildjailbreak.py  gen_harmful_gpt.py  gen_wildchat1m.py  hexphi_reference.py  merge_benign_corpora.py
ada/guardrails/: __init__.py  evaluate.py  templates.py
ada/models/: __init__.py  extraction.py  loading.py
ada/plotting/: __init__.py  _common.py  plot_adversarial_attacks.py  plot_deep_prefill.py  plot_e1_probe.py  plot_e1_tsne.py  plot_e2_prefill.py  plot_e3_attacks.py  plot_e4_sft.py  plot_e5_benign.py  plot_e6_time.py  plot_inference_cost.py  tables_e1.py  (+10 more)
configs/: deepspeed_zero3.json  guardrails.yaml  models.yaml  refusal_keywords.yaml
data/: README.md
docs/: ARCHITECTURE.md  HEXPHI.md  index.html
figures/: ablation_frequency.csv
interpretability/: README.md  refusal_features.py  requirements.txt
scripts/: 10_e1_collect.sh  11_e1_train.sh  12_e1_figures.sh  20_e2_prefill.sh  21_e2_baselines.sh  22_e2_figures.sh  30_e3_run_attacks.sh  31_e3_eval.sh  32_e3_figures.sh  40_e4_sft_train.sh  41_e4_sft_eval.sh  42_e4_figures.sh  50_e5_benign.sh  51_e5_figures.sh  60_e6_timing.sh  adversarial_eval.sh  adversarial_figures.sh  adversarial_generate.sh  build_example_results.py  deep_prefill_baselines.sh  deep_prefill_figures.sh  deep_prefill_generate.sh  fetch_example_results.sh  inference_cost.sh  make_all_figures.sh  over_refusal_figures.sh  over_refusal_generate.sh  prepare_datasets.sh  probe_collect.sh  probe_figures.sh  probe_train.sh  run_all.sh  run_tests.sh  sft_eval.sh  sft_figures.sh  sft_train.sh  upload_to_hf.py
tests/: conftest.py  test_ablation.py  test_cli_help.py  test_collect_helpers.py  test_configs.py  test_curves.py  test_generate.py  test_hexphi_reference.py  test_loading.py  test_naming.py  test_probe_train.py  test_registry.py  test_tokenization.py  test_utils.py
(+29 files in other folders)
